--- a/html2/css/style7.css
+++ b/html2/css/style7.css
@@ -7,13 +7,15 @@ header{
     padding : 25px;
 }
 aside{
+    float: right;
     background-color: #B36AE2;
-    width:20%
+    width:33%;
 
 }
 article{
-    background-color:#6FC041
-    width:40%
+    background-color:#6FC041;
+    width:67%;
+    float: left;
 }
 .twin{
     background-color:#F3901A
