--- a/html2/css/personal_site_style.css
+++ b/html2/css/personal_site_style.css
@@ -3,4 +3,11 @@ body{
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
+
+}
+.main{
+    width: 100%;
+    height:630px;
+    background-color: rgba(0, 0, 0, 0.37);
+
 }
