--- a/html2/css/personal_site_style.css
+++ b/html2/css/personal_site_style.css
@@ -8,6 +8,13 @@ body{
 .main{
     width: 100%;
     height:630px;
-    background-color: rgba(0, 0, 0, 0.37);
+    background-color: rgba(0, 0, 0, 0.767);
 
+}
+header{
+    font-size: 20px;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 200px;
+    color: white;
 }
