--- a/bootstrap2/css/border.css
+++ b/bootstrap2/css/border.css
@@ -12,7 +12,7 @@ div.one {
     border-style: solid;
     border-width: 1px;
     border-color: black;
-
+    border-radius: 10px;
 }
 
 p.allign {
@@ -29,24 +29,26 @@ form.padding-border {
 
 
 }
-
 div.two {
-
-    border-style: solid;
     border-width: 1px;
+    border-style: solid;
+    border-radius: 10px;
     border-color: #730D3D;
     padding: 10px 10px 10px 10px;
     background-color: #730D3D;
     color: white;
 }
 
-div.three {
 
+
+
+
+div.three {
     border-style: solid;
     border-width: 1px;
     border-color: #bcbcbc;
     background-color: #FFF9FF;
-
+    border-radius: 10px;
 
 }
 
@@ -77,5 +79,8 @@ hr.rounded {
     border-top: 8px solid #bbb;
     border-radius: 5px;
 }
+textarea{
+    border-radius: 10px;
 
+}
 
